--- a/client/src/components/FourYearPlan/FourYearPlan.css
+++ b/client/src/components/FourYearPlan/FourYearPlan.css
@@ -24,6 +24,10 @@
     box-shadow: 0px 0px 5px 0px #888;
     opacity: 0;
     animation: showup-slideup 1.5s ease forwards 0.5s;
+    -o-animation: showup-slideup 1.5s ease forwards 0.5s;
+    -ms-animation: showup-slideup 1.5s ease forwards 0.5s;
+    -moz-animation: showup-slideup 1.5s ease forwards 0.5s;
+    -webkit-animation: showup-slideup 1.5s ease forwards 0.5s;
 }
 
 /* For Smartphone viewing */
