--- a/client/src/components/Gallery/Gallery.css
+++ b/client/src/components/Gallery/Gallery.css
@@ -30,6 +30,10 @@
     box-sizing: border-box;
     display: inline-block;
     border-radius: 5px;
+    -o-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
 }
 .gallery-container .box .img-box {
     position: relative;
@@ -41,9 +45,17 @@
     width: 300px;
     height: 300px;
     transition: transform 2s;
+    -o-transition: transform 2s;
+    -ms-transition: transform 2s;
+    -moz-transition: transform 2s;
+    -webkit-transition: transform 2s;
 }
 .gallery-container .box:hover .img-box img {
     transform: scale(1.2);
+    -o-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -webkit-transform: scale(1.2);
 }
 .gallery-container .box .img-info {
     position: absolute;
@@ -53,16 +65,32 @@
     right: 10%;
     background: rgba(0, 0, 0, 0.7);
     transform: scaleY(0);
+    -o-transform: scaleY(0);
+    -ms-transform: scaleY(0);
+    -moz-transform: scaleY(0);
+    -webkit-transform: scaleY(0);
     transition: transform 0.5s;
+    -o-transition: transform 0.5s;
+    -ms-transition: transform 0.5s;
+    -moz-transition: transform 0.5s;
+    -webkit-transition: transform 0.5s;
     border-radius: 5px;
 }
 .gallery-container .box:hover .img-info {
     transform: scaleY(1);
+    -o-transform: scaleY(1);
+    -ms-transform: scaleY(1);
+    -moz-transform: scaleY(1);
+    -webkit-transform: scaleY(1);
 }
 .gallery-container .box .content {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
     text-align: center;
     padding: 15px;
     color: white;
