--- a/client/src/components/HowItsMade/HowItsMadeContent/CodingProcess/CodingProcess.css
+++ b/client/src/components/HowItsMade/HowItsMadeContent/CodingProcess/CodingProcess.css
@@ -12,9 +12,17 @@
 	  flex: 1;
 	  overflow: hidden;
 	  transition: .3s;
+		-o-transition: .3s;
+		-ms-transition: .3s;
+		-moz-transition: .3s;
+		-webkit-transition: .3s;
 	  margin: 0 2%;
 		background-color: white;
 	  box-shadow: 0 20px 30px rgba(0,0,0,0.1);
+		-o-box-shadow: 0 20px 30px rgba(0,0,0,0.1);
+		-ms-box-shadow: 0 20px 30px rgba(0,0,0,0.1);
+		-moz-box-shadow: 0 20px 30px rgba(0,0,0,0.1);
+		-webkit-box-shadow: 0 20px 30px rgba(0,0,0,0.1);
 	  line-height: 0;
 }
 
@@ -22,7 +30,11 @@
 	  width: 200%;
 	  height: 85%;
 	  object-fit: cover;
-	  transition: .5s;
+		transition: .5s;
+		-o-transition: .5s;
+		-ms-transition: .5s;
+		-moz-transition: .5s;
+		-webkit-transition: .5s;
 }
 
 .image-box > span {
