--- a/client/src/components/HowItsMade/HowItsMadeContent/Deploying/Deploying.css
+++ b/client/src/components/HowItsMade/HowItsMadeContent/Deploying/Deploying.css
@@ -11,16 +11,20 @@
 .deploy-button {
     display: inline-block;
     margin: 10px;
-    -webkit-border-radius: 8px;
+    -o-border-radius: 8px;
+    -ms-border-radius: 8px;
     -moz-border-radius: 8px;
+    -webkit-border-radius: 8px;
     border-radius: 8px;
-    -webkit-box-shadow:    0 8px 0 #b02727, 0 15px 20px rgba(0, 0, 0, .35);
-    -moz-box-shadow: 0 8px 0 #b02727, 0 15px 20px rgba(0, 0, 0, .35);
     box-shadow: 0 8px 0 #b02727, 0 15px 20px rgba(0, 0, 0, .35);
-    -webkit-transition: -webkit-box-shadow .1s ease-in-out;
-    -moz-transition: -moz-box-shadow .1s ease-in-out;
-    -o-transition: -o-box-shadow .1s ease-in-out;
+    -ms-box-shadow: 0 8px 0 #b02727, 0 15px 20px rgba(0, 0, 0, .35);
+    -moz-box-shadow: 0 8px 0 #b02727, 0 15px 20px rgba(0, 0, 0, .35);
+    -webkit-box-shadow:    0 8px 0 #b02727, 0 15px 20px rgba(0, 0, 0, .35);
     transition: box-shadow .1s ease-in-out;
+    -o-transition: -o-box-shadow .1s ease-in-out;
+    -ms-transition: -ms-box-shadow .1s ease-in-out;
+    -moz-transition: -moz-box-shadow .1s ease-in-out;
+    -webkit-transition: -webkit-box-shadow .1s ease-in-out;
     font-size: 50px;
     color: #fff;
 }
@@ -29,18 +33,23 @@
     display: inline-block;
     padding: 20px 30px;
     background-color: #fe1010;
-    -webkit-border-radius: 8px;
-    -moz-border-radius: 8px;
     border-radius: 8px;
-    -webkit-box-shadow: inset 0 -1px 1px rgba(255, 255, 255, .15);
-    -moz-box-shadow: inset 0 -1px 1px rgba(255, 255, 255, .15);
+    -o-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -webkit-border-radius: 8px;
     box-shadow: inset 0 -1px 1px rgba(255, 255, 255, .15);
+    -o-box-shadow: inset 0 -1px 1px rgba(255, 255, 255, .15);
+    -ms-box-shadow: inset 0 -1px 1px rgba(255, 255, 255, .15);
+    -moz-box-shadow: inset 0 -1px 1px rgba(255, 255, 255, .15);
+    -webkit-box-shadow: inset 0 -1px 1px rgba(255, 255, 255, .15);
     line-height: 1;
     text-shadow: 0 -1px 1px rgba(224, 0, 0, 0.7);
-    -webkit-transition: background-color .2s ease-in-out, -webkit-transform .1s ease-in-out;
-    -moz-transition: background-color .2s ease-in-out, -moz-transform .1s ease-in-out;
-    -o-transition: background-color .2s ease-in-out, -o-transform .1s ease-in-out;
     transition: background-color .2s ease-in-out, transform .1s ease-in-out;
+    -o-transition: background-color .2s ease-in-out, -o-transform .1s ease-in-out;
+    -ms-transition: background-color .2s ease-in-out, -o-transform .1s ease-in-out;
+    -moz-transition: background-color .2s ease-in-out, -moz-transform .1s ease-in-out;
+    -webkit-transition: background-color .2s ease-in-out, -webkit-transform .1s ease-in-out;
 }
 
 .deploy-button:hover span {
@@ -50,16 +59,19 @@
 }
 
 .deploy-button:active, .button:focus {
-    -webkit-box-shadow:    0 8px 0 #b81919, 0 12px 10px rgba(0, 0, 0, .3);
+    box-shadow: 0 8px 0 #b81919, 0 12px 10px rgba(0, 0, 0, .3);
+    -o-box-shadow: 0 8px 0 #b81919, 0 12px 10px rgba(0, 0, 0, .3);
+    -ms-box-shadow: 0 8px 0 #b81919, 0 12px 10px rgba(0, 0, 0, .3);
     -moz-box-shadow: 0 8px 0 #b81919, 0 12px 10px rgba(0, 0, 0, .3);
-    box-shadow:    0 8px 0 #b81919, 0 12px 10px rgba(0, 0, 0, .3);
+    -webkit-box-shadow:    0 8px 0 #b81919, 0 12px 10px rgba(0, 0, 0, .3);
 }
 
 .deploy-button:active span {
-    -webkit-transform: translate(0, 4px);
-    -moz-transform: translate(0, 4px);
-    -o-transform: translate(0, 4px);
     transform: translate(0, 4px);
+    -o-transform: translate(0, 4px);
+    -ms-transform: translate(0, 4px);
+    -moz-transform: translate(0, 4px);
+    -webkit-transform: translate(0, 4px);
 }
 
 @media screen and (max-width: 1024px) {
