--- a/client/src/components/HowItsMade/HowItsMadeContent/WireframeDesign/WireframeDesign.css
+++ b/client/src/components/HowItsMade/HowItsMadeContent/WireframeDesign/WireframeDesign.css
@@ -16,17 +16,21 @@
 		background-color: white;
 		z-index: 2;
 		font-size: 0.7em;
-		-webkit-box-shadow: 2px 2px 4px rgba(0,0, 0, 0.3);
-		-moz-box-shadow: 2px 2px 4px rgba(0,0, 0, 0.3);
 		box-shadow: 2px 2px 4px rgba(0,0, 0, 0.3);
+		-o-box-shadow: 2px 2px 4px rgba(0,0, 0, 0.3);
+		-ms-box-shadow: 2px 2px 4px rgba(0,0, 0, 0.3);
+		-moz-box-shadow: 2px 2px 4px rgba(0,0, 0, 0.3);
+		-webkit-box-shadow: 2px 2px 4px rgba(0,0, 0, 0.3);
 }
 
 .wireframe-design-container > .wireframe:nth-child(1) {
 		height: 320px;
 		width: 320px;
-		-webkit-transform: rotate(-10deg);
-		-moz-transform: rotate(-10deg);
 		transform: rotate(-10deg);
+		-o-transform: rotate(-10deg);
+		-ms-transform: rotate(-10deg);
+		-moz-transform: rotate(-10deg);
+		-webkit-transform: rotate(-10deg);
 }
 .wireframe-design-container > .wireframe:nth-child(1) > img {
 		height: 300px;
@@ -36,9 +40,11 @@
 .wireframe-design-container > .wireframe:nth-child(2) {
 		height: 280px;
 		width: 200px;
-		-webkit-transform: rotate(5deg);
-		-moz-transform: rotate(5deg);
 		transform: rotate(5deg);
+		-o-transform: rotate(-10deg);
+		-ms-transform: rotate(5deg);
+		-moz-transform: rotate(5deg);
+		-webkit-transform: rotate(5deg);
 }
 .wireframe-design-container > .wireframe:nth-child(2) > img {
 		height: 260px;
