--- a/client/src/components/Resume/Resume.css
+++ b/client/src/components/Resume/Resume.css
@@ -21,9 +21,21 @@
     left: 50%;
     bottom: 0%;
     transform: translate(-50%, 0);
+    -o-transform: translate(-50%, 0);
+    -ms-transform: translate(-50%, 0);
+    -moz-transform: translate(-50%, 0);
+    -webkit-transform: translate(-50%, 0);
     box-shadow: 0px 0px 5px 0px #888;
+    -o-box-shadow: 0px 0px 5px 0px #888;
+    -ms-box-shadow: 0px 0px 5px 0px #888;
+    -moz-box-shadow: 0px 0px 5px 0px #888;
+    -webkit-box-shadow: 0px 0px 5px 0px #888;
     opacity: 0;
     animation: showup-slideup 1.5s ease forwards 0.5s;
+    -o-animation: showup-slideup 1.5s ease forwards 0.5s;
+    -ms-animation: showup-slideup 1.5s ease forwards 0.5s;
+    -moz-animation: showup-slideup 1.5s ease forwards 0.5s;
+    -webkit-animation: showup-slideup 1.5s ease forwards 0.5s;
 }
 
 .resume-page-container > .button-group {
