got rid of showup (opacity from 0 to 100) animations because they did not work in Heroku

--- a/client/src/components/ContactMe/ContactMe.css
+++ b/client/src/components/ContactMe/ContactMe.css
@@ -20,11 +20,13 @@
 .summary {
     justify-content: center;
     text-align: center;
+    /*
     animation: slidein 0.5s ease forwards 0s;
     -o-animation: slidein 0.5s ease forwards 0s;
     -ms-animation: slidein 0.5s ease forwards 0s;
     -moz-animation: slidein 0.5s ease forwards 0s;
     -webkit-animation: slidein 0.5s ease forwards 0s;
+    */
 }
 
 .summary > img {
@@ -32,34 +34,40 @@
     width: 200px;
     height: 200px;
     border-radius: 50%;
+    /*
     opacity: 0;
     animation: showup 0.5s ease forwards 2s;
     -o-animation: showup 0.5s ease forwards 2s;
     -ms-animation: showup 0.5s ease forwards 2s;
     -moz-animation: showup 0.5s ease forwards 2s;
     -webkit-animation: showup 0.5s ease forwards 2s;
+    */
 }
 
 .contact-list > li {
     color: inherit;
     list-style-type: none;
+    /*
     opacity: 0;
     animation: showup 0.2s ease forwards 0.1s;
     -o-animation: showup 0.2s ease forwards 0.1s;
     -ms-animation: showup 0.2s ease forwards 0.1s;
     -moz-animation: showup 0.2s ease forwards 0.1s;
     -webkit-animation: showup 0.2s ease forwards 0.1s;
+    */
 }
 
 .signature {
     font-family: 'Cookie', cursive;
     font-size: 3em;
+    /*
     opacity: 0%;
     animation: showup 1s ease forwards 1s;
     -o-animation: showup 1s ease forwards 1s;
     -ms-animation: showup 1s ease forwards 1s;
     -moz-animation: showup 1s ease forwards 1s;
     -webkit-animation: showup 1s ease forwards 1s;
+    */
 }
 
 .contact-me-col-left {
