--- a/client/src/components/FourYearPlan/FourYearPlan.css
+++ b/client/src/components/FourYearPlan/FourYearPlan.css
@@ -22,12 +22,11 @@
     bottom: 0%;
     transform: translate(-50%, 0);
     box-shadow: 0px 0px 5px 0px #888;
-    opacity: 0;
-    animation: showup-slideup 1.5s ease forwards 0.5s;
-    -o-animation: showup-slideup 1.5s ease forwards 0.5s;
-    -ms-animation: showup-slideup 1.5s ease forwards 0.5s;
-    -moz-animation: showup-slideup 1.5s ease forwards 0.5s;
-    -webkit-animation: showup-slideup 1.5s ease forwards 0.5s;
+    animation: slideup 1.5s;
+    -o-animation: slideup 1.5s;
+    -ms-animation: slideup 1.5s;
+    -moz-animation: slideup 1.5s;
+    -webkit-animation: slideup 1.5s;
 }
 
 /* For Smartphone viewing */
