--- a/client/src/components/Resume/Resume.css
+++ b/client/src/components/Resume/Resume.css
@@ -30,12 +30,11 @@
     -ms-box-shadow: 0px 0px 5px 0px #888;
     -moz-box-shadow: 0px 0px 5px 0px #888;
     -webkit-box-shadow: 0px 0px 5px 0px #888;
-    opacity: 0;
-    animation: showup-slideup 1.5s ease forwards 0.5s;
-    -o-animation: showup-slideup 1.5s ease forwards 0.5s;
-    -ms-animation: showup-slideup 1.5s ease forwards 0.5s;
-    -moz-animation: showup-slideup 1.5s ease forwards 0.5s;
-    -webkit-animation: showup-slideup 1.5s ease forwards 0.5s;
+    animation: slideup 1.5s;
+    -o-animation: slideup 1.5s;
+    -ms-animation: slideup 1.5s;
+    -moz-animation: slideup 1.5s;
+    -webkit-animation: slideup 1.5s;
 }
 
 .resume-page-container > .button-group {
