--- a/client/src/components/Projects/ProjectTemplate.css
+++ b/client/src/components/Projects/ProjectTemplate.css
@@ -3,6 +3,7 @@
     background-color: #252827;
     min-height: 75vh;
     width: 100vw;
+    overflow: hidden;
 }
 .project-page-container > h1 {
     text-align: center;
@@ -14,10 +15,10 @@
 }
 
 .project-info-box {
-    max-width: 90%;
+    max-width: 100%;
+    min-width: 250px;
     background: rgba(255, 255, 255, 0.1);
-    margin: 50px;
-    margin-left: 0 !important;
+    margin: 50px 50px 50px 0;
     justify-content: center;
 }
 .project-info-box > h2 {
@@ -65,6 +66,7 @@
 
 .project-description {
     margin: 50px;
+    min-width: 300px;
     font-size: 1rem;
     text-indent: 50px;
     color: white;
@@ -92,15 +94,14 @@
     border-top-right-radius: 4px;
     background: rgba(255, 255, 255, 0.1);
     color: rgba(255, 255, 255, 0.8);
-    margin: 50px;
-    margin-right: 0 !important;
+    margin: 20px 0 20px 20px;
     float: right;
     font-family: 'Saira', sans-serif;
     letter-spacing: 0.5px;
     position: relative;
     line-height: 1.4em;
     font-size: 1.03em;
-    padding: 50px;
+    padding: 20px;
     list-style: none;
     text-align: left;
     font-weight: 100;
@@ -135,7 +136,7 @@
     top: 0;
 }
 .project-timeline .project-timeline-event:before {
-    left: -217.5px;
+    left: -170.5px;
     color: rgba(255, 255, 255, 0.4);
     content: attr(data-date);
     text-align: right;
@@ -145,7 +146,7 @@
 }
 .project-timeline .project-timeline-event:after {
     box-shadow: 0 0 0 4px #00aacd;
-    left: -57.85px;
+    left: -27.85px;
     background: #313534;
     border-radius: 50%;
     height: 11px;
@@ -155,3 +156,10 @@
 }
 
 /* End of Tutorial */
+
+@media only screen and (max-width: 670px) {
+    .project-info-box {
+        margin-right: 0;
+        max-width: 100%;
+    }
+}
