--- a/client/src/components/HowItsMade/HowItsMadeContent/CodingProcess/CodingProcess.css
+++ b/client/src/components/HowItsMade/HowItsMadeContent/CodingProcess/CodingProcess.css
@@ -55,11 +55,11 @@
 .coding-process-col-img {
 		display: flex;
 		justify-content: center;
-		padding: 12vh 5vw 0;
+		padding: 0 5vw 0;
 }
 
 .coding-process-col-text {
-		padding: 10vw 10vw;
+		padding: 10vw 10vw 0;
 }
 
 @media screen and (min-width: 600px) {
