--- a/client/src/components/HowItsMade/HowItsMadeContent/UserStories/UserStories.css
+++ b/client/src/components/HowItsMade/HowItsMadeContent/UserStories/UserStories.css
@@ -1,11 +1,16 @@
 .user-story-section {
-    padding: 0 0 100px 0;
+    padding-bottom: 10vh;
 }
-.user-story-section > .user-story-col-left {
+
+.user-story-col-img {
     padding-left: 10vw;
+    overflow: hidden;
+    height: 240px;
+    width: 65%;
+    min-width: 400px;
 }
-.user-story-section > .user-story-col-right {
-    padding-right: 10vw;
+.user-story-col-text {
+    padding: 0 10vw 0 5vw;
 }
 
 .scrolling-wrapper-flexbox {
@@ -46,13 +51,10 @@
 }
 
 @media only screen and (max-width: 1024px) {
-    .user-story-col-right {
+    .user-story-col-text {
       padding: 0 10vw 0;
     }
-    .user-story-col-right p {
+    .user-story-col-text p {
       padding: 0 !important;
-    }
-    .user-story-section {
-        padding-bottom: 0;
     }
 }
