--- a/client/src/components/HowItsMade/HowItsMadeContent/WireframeDesign/WireframeDesign.css
+++ b/client/src/components/HowItsMade/HowItsMadeContent/WireframeDesign/WireframeDesign.css
@@ -1,13 +1,19 @@
+.wireframe-section {
+		padding-bottom: 15vh;
+		max-width: 100vw;
+		overflow: hidden;
+}
+
 .wireframe-design-container {
 	  display: flex;
-	  max-width: 100vw;
+		height: 320px;
+		min-width: 400px;
 	  padding: 4% 2%;
-	  height: 400px;
 }
 
 .wireframe {
 		display: block;
-		position: relative;
+		position: absolute;
 		text-decoration: none;
 		text-align: center;
 		color: #333;
@@ -40,11 +46,11 @@
 .wireframe-design-container > .wireframe:nth-child(2) {
 		height: 280px;
 		width: 200px;
-		transform: rotate(5deg);
-		-o-transform: rotate(-10deg);
-		-ms-transform: rotate(5deg);
-		-moz-transform: rotate(5deg);
-		-webkit-transform: rotate(5deg);
+		transform: rotate(5deg) translate(300px, 0);
+		-o-transform: rotate(5deg) translate(300px, 0);
+		-ms-transform: rotate(5deg) translate(300px, 0);
+		-moz-transform: rotate(5deg) translate(300px, 0);
+		-webkit-transform: rotate(5deg) translate(300px, 0);
 }
 .wireframe-design-container > .wireframe:nth-child(2) > img {
 		height: 260px;
@@ -52,11 +58,38 @@
 }
 
 .wireframe-design-col-text {
-		padding: 50px 10vw 0 10vw;
+		padding: 50px 5vw 0 10vw;
+}
+
+.wireframe-design-col-img {
+		padding-left: 5vw;
 }
 
 @media only screen and (max-width: 600px) {
+		.wireframe-section {
+				padding-bottom: 10vh;
+		}
 		.wireframe-design-col-text {
-				padding: 100px 10vw 0 0;
+				padding: 100px 5vw 0 10vw;
+		}
+		.wireframe-design-container > .wireframe:nth-child(2) {
+				transform: rotate(5deg) translate(250px, 0);
+				-o-transform: rotate(5deg) translate(250px, 0);
+				-ms-transform: rotate(5deg) translate(250px, 0);
+				-moz-transform: rotate(5deg) translate(250px, 0);
+				-webkit-transform: rotate(5deg) translate(250px, 0);
+		}
+}
+
+@media only screen and (max-width: 490px) {
+		.wireframe-design-container > .wireframe:nth-child(1) {
+				transform: rotate(-10deg) translate(15%, 0);
+				-o-transform: rotate(-10deg) translate(15%, 0);
+				-ms-transform: rotate(-10deg) translate(15%, 0);
+				-moz-transform: rotate(-10deg) translate(15%, 0);
+				-webkit-transform: rotate(-10deg) translate(15%, 0);
+		}
+		.wireframe-design-container > .wireframe:nth-child(2) {
+				display: none;
 		}
 }
