--- a/client/src/components/FAQ/FAQ.css
+++ b/client/src/components/FAQ/FAQ.css
@@ -106,3 +106,9 @@
 .accordion-item:target .accordion-link .ion-md-remove {
     display: block;
 }
+
+@media only screen and (max-width: 680px) {
+    .faq-container {
+        background-image: url("../../assets/wallpaper-faq-phone.jpg");
+    }
+}
